[package]
name = "wasm_md"
version = "0.1.0"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
macroz = "0.1.1"